--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ PyPika==0.48.9
 pyreadline3==3.4.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python==3.9.7
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
