--- a/.github/workflows/heroku_docker.yml
+++ b/.github/workflows/heroku_docker.yml
@@ -16,6 +16,6 @@ jobs:
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: |
-        heroku stack:set container -a app
+        heroku stack:set container -a fire-ai-backend
 
     # Add additional steps for deploying your app
